--- a/ie/index.html
+++ b/ie/index.html
@@ -49,7 +49,7 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!------ Include the above in your HEAD tag ---------->
-    <div id="banner"></div>
+    <div class="container" id="banner"><img src="/title_logo.png" alt=""></div>
         <!-- <div id="content">
         </div> -->
         <div class="menu-bar container">
